@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.14 2007-10-04 22:04:01 nicm Exp $ */
+/* $Id: cmd.c,v 1.15 2007-10-12 13:03:58 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -37,7 +37,8 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_previous_window_entry,
 	&cmd_rename_window_entry,
 	&cmd_select_window_entry,
-	&cmd_set_option_entry,
+	&cmd_send_prefix_entry,
+	&cmd_set_option_entry,	
 	&cmd_unbind_key_entry,
 	NULL
 };
