@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.55 2007-10-12 12:08:51 nicm Exp $ */
+/* $Id: tmux.h,v 1.56 2007-10-12 13:03:58 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -525,9 +525,10 @@ extern const struct cmd_entry cmd_next_window_entry;
 extern const struct cmd_entry cmd_previous_window_entry;
 extern const struct cmd_entry cmd_rename_window_entry;
 extern const struct cmd_entry cmd_select_window_entry;
-void	cmd_select_window_default(void **, int);
+extern const struct cmd_entry cmd_send_prefix_entry;
 extern const struct cmd_entry cmd_set_option_entry;
 extern const struct cmd_entry cmd_unbind_key_entry;
+void	cmd_select_window_default(void **, int);
 
 /* client.c */
 int	 client_init(char *, struct client_ctx *, int);
